force-app/main/default/objects/OW_record_type_reference__mdt/fields/OW_parent__c.field-meta.xml
<CustomField>
    <fullName>OW_parent__c</fullName>
    <description>For the likes of record type references, this will capture the object this applies to. Should be entered as the developer name of the parent.</description>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>