force-app/main/default/objects/OW_record_type_reference__mdt/fields/OW_record_type_id__c.field-meta.xml
<CustomField>
    <fullName>OW_record_type_id__c</fullName>
    <description>Holds the record type ID.</description>
    <label>Record Type ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>