force-app/main/default/objects/OW_record_type_reference__mdt/fields/OW_type__c.field-meta.xml
<CustomField>
    <fullName>OW_type__c</fullName>
    <description>The type of reference stored.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Record type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>